# urban-prediction-mpi-index

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01-eda.ipynb  01-preprocessing.ipynb  02-feature_engineering.ipynb.ipynb
src/: __init__.py  config.yaml  feature_engineering.py  pipeline.py  preprocessing.py  utils.py
